--- a/example/03-koa/08-templates/views/user.ejs
+++ b/example/03-koa/08-templates/views/user.ejs
@@ -1,1 +1,37 @@
-<p><%= user.name.first %> is a <%= user.age %> year old <%= user.species %>.</p>
+
+<html>
+<head>
+<meta charset="utf-8"> 
+<style>
+p.outset {border-style:outset;}
+p.inset {border-style:inset;}
+p.one
+{
+	border-style:solid;
+	border-color:red;
+}
+table,th,td
+{
+	border:1px solid green;
+}
+</style>
+</head>
+
+<body>
+    <table>
+<tr>
+    <td><p class="inset"></p> Name </td>
+    <td><p class="outset"><%= user.name.first %> </p> </td>
+</tr>
+<tr>
+    <td>Age</td>
+    <td><p class="outset"> <%= user.age %></p></td>
+</tr>
+<tr>
+    <td>Species</td>
+    <td><p class="outset"><%= user.species %> </p></td>
+</tr>
+</table>
+
+</body>
+
